# play-cmake

./: Readme.md
play_cmake/: CMakeLists.txt
play_cmake/src/: CMakeLists.txt  main  main.cpp
play_cmake_2/: CMakeLists.txt
play_cmake_2/src/: fonct_exp.hpp  seqret.cpp  seqret.hpp
play_cmake_3/: CMakeLists.txt
play_cmake_3/src/: CMakeLists.txt  main.cpp
play_cmake_4/: CMakeLists.txt
play_cmake_5/: CMakeLists.txt
play_cmake_5/examples/: CMakeLists.txt  try1.cpp  try2.cpp
play_cmake_5/src/: CMakeLists.txt  fonct_exp.cpp
play_cmake_6/: CMakeLists.txt
play_cmake_6/tests/: CMakeLists.txt  test_lib.cpp
